Updated site to focus more on fundamental motivation

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "SciDash: SciUnit and NeuronUnit Model Validation Frameworks"
-description: The SciDash Project provides tools, SciUnit and NeuronUnit, to make validation of scientific models against experimental data easy, transparent, and continuously integrated into the model development process.
+title: "SciDash"
+description: Rigorous, reproducible, extensible, data-driven model validation for science
 google_analytics: UA-74220261-1
 show_downloads: false
 theme: jekyll-theme-cayman
