--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "SciDash"
+title: "SciUnit"
 description: Rigorous, reproducible, extensible, data-driven model validation for science
 google_analytics: UA-74220261-1
 show_downloads: false
